spacing corrected

--- a/carTrade/css/style.css
+++ b/carTrade/css/style.css
@@ -159,7 +159,7 @@ a{
 	padding-bottom: 29px;
 }
 .optionBox .upperSection{
-	padding-bottom: 37px;
+	padding-bottom: 38px;
 }
 .upperSection h3{
 	font-size: 18px;
